@@ -1,51 +1,63 @@
-import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.IntegerArgumentType;
+import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import com.mojang.brigadier.builder.RequiredArgumentBuilder;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
 import java.util.Collection;
+import java.util.List;
 
 public class aoc {
-   public static void a(CommandDispatcher<du> $$0) {
+   private static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(wi.c("commands.transfer.error.no_players"));
+
+   public static void a(CommandDispatcher<dv> $$0) {
       $$0.register(
-         (LiteralArgumentBuilder)((LiteralArgumentBuilder)((LiteralArgumentBuilder)dv.a("warden_spawn_tracker").requires($$0x -> $$0x.c(2)))
-               .then(dv.a("clear").executes($$0x -> a((du)$$0x.getSource(), ImmutableList.of(((du)$$0x.getSource()).h())))))
+         (LiteralArgumentBuilder)((LiteralArgumentBuilder)dw.a("transfer").requires($$0x -> $$0x.c(3)))
             .then(
-               dv.a("set")
+               ((RequiredArgumentBuilder)dw.a("hostname", StringArgumentType.string())
+                     .executes($$0x -> a((dv)$$0x.getSource(), StringArgumentType.getString($$0x, "hostname"), 25565, List.of(((dv)$$0x.getSource()).h()))))
                   .then(
-                     dv.a("warning_level", IntegerArgumentType.integer(0, 4))
-                        .executes(
-                           $$0x -> a((du)$$0x.getSource(), ImmutableList.of(((du)$$0x.getSource()).h()), IntegerArgumentType.getInteger($$0x, "warning_level"))
+                     ((RequiredArgumentBuilder)dw.a("port", IntegerArgumentType.integer(1, 65535))
+                           .executes(
+                              $$0x -> a(
+                                    (dv)$$0x.getSource(),
+                                    StringArgumentType.getString($$0x, "hostname"),
+                                    IntegerArgumentType.getInteger($$0x, "port"),
+                                    List.of(((dv)$$0x.getSource()).h())
+                                 )
+                           ))
+                        .then(
+                           dw.a("players", ei.d())
+                              .executes(
+                                 $$0x -> a(
+                                       (dv)$$0x.getSource(),
+                                       StringArgumentType.getString($$0x, "hostname"),
+                                       IntegerArgumentType.getInteger($$0x, "port"),
+                                       ei.f($$0x, "players")
+                                    )
+                              )
                         )
                   )
             )
       );
    }
 
-   private static int a(du $$0, Collection<? extends cjt> $$1, int $$2) {
-      for (cjt $$3 : $$1) {
-         $$3.aa().ifPresent($$1x -> $$1x.a($$2));
-      }
-
-      if ($$1.size() == 1) {
-         $$0.a(() -> wg.a("commands.warden_spawn_tracker.set.success.single", $$1.iterator().next().O_()), true);
+   private static int a(dv $$0, String $$1, int $$2, Collection<apv> $$3) throws CommandSyntaxException {
+      if ($$3.isEmpty()) {
+         throw a.create();
       } else {
-         $$0.a(() -> wg.a("commands.warden_spawn_tracker.set.success.multiple", $$1.size()), true);
+         for (apv $$4 : $$3) {
+            $$4.d.b(new zd($$1, $$2));
+         }
+
+         if ($$3.size() == 1) {
+            $$0.a(() -> wi.a("commands.transfer.success.single", $$3.iterator().next().O_(), $$1, $$2), true);
+         } else {
+            $$0.a(() -> wi.a("commands.transfer.success.multiple", $$3.size(), $$1, $$2), true);
+         }
+
+         return $$3.size();
       }
-
-      return $$1.size();
-   }
-
-   private static int a(du $$0, Collection<? extends cjt> $$1) {
-      for (cjt $$2 : $$1) {
-         $$2.aa().ifPresent(ciz::b);
-      }
-
-      if ($$1.size() == 1) {
-         $$0.a(() -> wg.a("commands.warden_spawn_tracker.clear.success.single", $$1.iterator().next().O_()), true);
-      } else {
-         $$0.a(() -> wg.a("commands.warden_spawn_tracker.clear.success.multiple", $$1.size()), true);
-      }
-
-      return $$1.size();
    }
 }
