@@ -1,44 +1,59 @@
-import com.mojang.brigadier.StringReader;
-import com.mojang.brigadier.arguments.ArgumentType;
-import com.mojang.brigadier.context.CommandContext;
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.concurrent.CompletableFuture;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import javax.annotation.Nullable;
 
-public class ec implements ArgumentType<n> {
-   private static final Collection<String> b = Arrays.asList("red", "green");
-   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> wg.b("argument.color.invalid", $$0));
+public record ec(List<ec.a> b) {
+   public static final ec a = new ec(List.of());
+   private static final int c = 8;
+   private static final int d = 16;
 
-   private ec() {
+   public ec(vi $$0) {
+      this($$0.a(vi.a(ArrayList::new, 8), ec.a::new));
    }
 
-   public static ec a() {
-      return new ec();
+   @Nullable
+   public wu a(String $$0) {
+      for (ec.a $$1 : this.b) {
+         if ($$1.a.equals($$0)) {
+            return $$1.b;
+         }
+      }
+
+      return null;
    }
 
-   public static n a(CommandContext<du> $$0, String $$1) {
-      return (n)$$0.getArgument($$1, n.class);
+   public void a(vi $$0) {
+      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
    }
 
-   public n a(StringReader $$0) throws CommandSyntaxException {
-      String $$1 = $$0.readUnquotedString();
-      n $$2 = n.b($$1);
-      if ($$2 != null && !$$2.d()) {
-         return $$2;
-      } else {
-         throw a.create($$1);
+   public static ec a(xa<?> $$0, ec.b $$1) {
+      List<ec.a> $$2 = $$0.a().stream().map($$1x -> {
+         wu $$2x = $$1.sign($$1x.c());
+         return $$2x != null ? new ec.a($$1x.a(), $$2x) : null;
+      }).filter(Objects::nonNull).toList();
+      return new ec($$2);
+   }
+
+   public List<ec.a> a() {
+      return this.b;
+   }
+
+   public static record a(String a, wu b) {
+
+      public a(vi $$0) {
+         this($$0.d(16), wu.a($$0));
+      }
+
+      public void a(vi $$0) {
+         $$0.a(this.a, 16);
+         wu.a($$0, this.b);
       }
    }
 
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return dz.b(n.a(true, false), $$1);
-   }
-
-   public Collection<String> getExamples() {
-      return b;
+   @FunctionalInterface
+   public interface b {
+      @Nullable
+      wu sign(String var1);
    }
 }
