@@ -1,47 +1,271 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface qi {
-   static void a(px<efn> $$0) {
-      im<efh> $$1 = $$0.a(ks.aF);
-      im<czw> $$2 = $$0.a(ks.av);
-      il.c<efn> $$3 = $$0.a(
-         efa.a,
-         new efn(
-            List.of(efn.a($$1.b(efb.t)), efn.a($$1.b(efb.u)), efn.a($$1.b(efb.v)), efn.a($$1.b(efb.w)), efn.a($$1.b(efb.x))), new egc(34, 8, egd.a, 10387312)
-         )
-      );
-      $$0.a(efa.b, new efn($$1.b(efb.f), new egc(32, 8, egd.a, 14357617)));
-      $$0.a(efa.c, new efn($$1.b(efb.g), new egc(32, 8, egd.a, 14357618)));
-      $$0.a(efa.d, new efn($$1.b(efb.e), new egc(32, 8, egd.a, 14357619)));
-      $$0.a(efa.e, new efn($$1.b(efb.j), new egc(32, 8, egd.a, 14357620)));
-      $$0.a(efa.f, new efn($$1.b(efb.a), new egc(jg.g, ege.c.b, 0.2F, 165745296, Optional.of(new ege.a($$3, 10)), 32, 8, egd.a)));
-      $$0.a(efa.q, new efn($$1.b(efb.F), new egc(24, 8, egd.a, 20083232)));
-      $$0.a(efa.g, new efn($$1.b(efb.l), new egc(32, 5, egd.b, 10387313)));
-      $$0.a(efa.h, new efn($$1.b(efb.d), new egc(80, 20, egd.b, 10387319)));
-      $$0.a(efa.i, new efn($$1.b(efb.r), new egc(new jg(9, 0, 9), ege.c.c, 0.01F, 0, Optional.empty(), 1, 0, egd.a)));
-      $$0.a(efa.j, new efn(List.of(efn.a($$1.b(efb.b)), efn.a($$1.b(efb.c))), new egc(jg.g, ege.c.d, 0.004F, 0, Optional.empty(), 1, 0, egd.a)));
+public class qi {
+   public static final aju<egz> a = qg.a("village/savanna/town_centers");
+   private static final aju<egz> b = qg.a("village/savanna/terminators");
+   private static final aju<egz> c = qg.a("village/savanna/zombie/terminators");
+
+   public static void a(pz<egz> $$0) {
+      io<eeu> $$1 = $$0.a(ku.aF);
+      in<eeu> $$2 = $$1.b(rw.g);
+      in<eeu> $$3 = $$1.b(rw.a);
+      in<eeu> $$4 = $$1.b(rw.b);
+      io<ejo> $$5 = $$0.a(ku.aH);
+      in<ejo> $$6 = $$5.b(qh.b);
+      in<ejo> $$7 = $$5.b(qh.j);
+      in<ejo> $$8 = $$5.b(qh.m);
+      io<egz> $$9 = $$0.a(ku.aJ);
+      in<egz> $$10 = $$9.b(qg.a);
+      in<egz> $$11 = $$9.b(b);
+      in<egz> $$12 = $$9.b(c);
       $$0.a(
-         efa.k,
-         new efn(
-            List.of(
-               efn.a($$1.b(efb.y)),
-               efn.a($$1.b(efb.z)),
-               efn.a($$1.b(efb.A)),
-               efn.a($$1.b(efb.B)),
-               efn.a($$1.b(efb.C)),
-               efn.a($$1.b(efb.D)),
-               efn.a($$1.b(efb.E))
+         a,
+         new egz(
+            $$10,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(egx.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(egx.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(egx.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(egx.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(egx.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(egx.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
             ),
-            new egc(40, 15, egd.a, 34222645)
+            egz.a.b
          )
       );
-      $$0.a(efa.l, new efn(List.of(efn.a($$1.b(efb.h)), efn.a($$1.b(efb.i))), new egc(24, 4, egd.a, 165745295)));
-      $$0.a(efa.m, new efn(List.of(efn.a($$1.b(efb.m)), efn.a($$1.b(efb.n))), new egc(20, 8, egd.a, 14357621)));
-      $$0.a(efa.n, new efn(List.of(efn.a($$1.b(efb.o), 2), efn.a($$1.b(efb.s), 3)), new egc(27, 4, egd.a, 30084232)));
-      $$0.a(efa.o, new efn($$1.b(efb.p), new egc(2, 1, egd.a, 14357921)));
-      $$0.a(efa.p, new efn($$1.b(efb.q), new egc(20, 11, egd.b, 10387313)));
-      $$0.a(efa.r, new efn($$1.b(efb.k), new egb(32, 3, 128, $$2.b(avb.o))));
-      $$0.a(efa.s, new efn($$1.b(efb.G), new egc(34, 8, egd.a, 83469867)));
+      qg.a(
+         $$0,
+         "village/savanna/streets",
+         new egz(
+            $$11,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(egx.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(egx.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(egx.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(egx.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(egx.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(egx.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(egx.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(egx.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(egx.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(egx.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(egx.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(egx.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(egx.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(egx.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(egx.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(egx.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(egx.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(egx.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            egz.a.a
+         )
+      );
+      qg.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new egz(
+            $$12,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(egx.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(egx.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(egx.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(egx.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(egx.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(egx.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(egx.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(egx.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(egx.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(egx.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(egx.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            egz.a.a
+         )
+      );
+      qg.a(
+         $$0,
+         "village/savanna/houses",
+         new egz(
+            $$11,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(egx.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(egx.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(egx.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(egx.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(egx.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(egx.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(egx.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(egx.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(egx.g(), 5)
+               }
+            ),
+            egz.a.b
+         )
+      );
+      qg.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new egz(
+            $$12,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(egx.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(egx.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(egx.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(egx.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(egx.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(egx.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(egx.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(egx.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(egx.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(egx.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(egx.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(egx.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(egx.g(), 5)
+               }
+            ),
+            egz.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new egz(
+            $$10,
+            ImmutableList.of(
+               Pair.of(egx.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(egx.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(egx.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(egx.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(egx.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            egz.a.a
+         )
+      );
+      $$0.a(
+         c,
+         new egz(
+            $$10,
+            ImmutableList.of(
+               Pair.of(egx.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(egx.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(egx.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(egx.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(egx.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            egz.a.a
+         )
+      );
+      qg.a($$0, "village/savanna/trees", new egz($$10, ImmutableList.of(Pair.of(egx.a($$2), 1)), egz.a.b));
+      qg.a(
+         $$0,
+         "village/savanna/decor",
+         new egz(
+            $$10,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(egx.a($$2), 4),
+               Pair.of(egx.a($$3), 4),
+               Pair.of(egx.a($$4), 1),
+               Pair.of(egx.g(), 4)
+            ),
+            egz.a.b
+         )
+      );
+      qg.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new egz(
+            $$10,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(egx.a($$2), 4),
+               Pair.of(egx.a($$3), 4),
+               Pair.of(egx.a($$4), 1),
+               Pair.of(egx.g(), 4)
+            ),
+            egz.a.b
+         )
+      );
+      qg.a(
+         $$0,
+         "village/savanna/villagers",
+         new egz(
+            $$10,
+            ImmutableList.of(
+               Pair.of(egx.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(egx.a("village/savanna/villagers/baby"), 1),
+               Pair.of(egx.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            egz.a.b
+         )
+      );
+      qg.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new egz(
+            $$10,
+            ImmutableList.of(Pair.of(egx.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(egx.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            egz.a.b
+         )
+      );
    }
 }
