@@ -1,250 +1,107 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class ql {
-   public static final ajs<egq> a = qe.a("village/taiga/town_centers");
-   private static final ajs<egq> b = qe.a("village/taiga/terminators");
+   public static efq.c a(ir<daf> $$0, Map<bqw, efx> $$1, duw.b $$2, egb $$3) {
+      return new efq.c($$0, $$1, $$2, $$3);
+   }
 
-   public static void a(px<egq> $$0) {
-      im<eel> $$1 = $$0.a(ks.aE);
-      il<eel> $$2 = $$1.b(ru.h);
-      il<eel> $$3 = $$1.b(ru.i);
-      il<eel> $$4 = $$1.b(ru.e);
-      il<eel> $$5 = $$1.b(ru.l);
-      il<eel> $$6 = $$1.b(ru.m);
-      im<ejf> $$7 = $$0.a(ks.aG);
-      il<ejf> $$8 = $$7.b(qf.f);
-      il<ejf> $$9 = $$7.b(qf.d);
-      il<ejf> $$10 = $$7.b(qf.k);
-      il<ejf> $$11 = $$7.b(qf.o);
-      im<egq> $$12 = $$0.a(ks.aI);
-      il<egq> $$13 = $$12.b(qe.a);
-      il<egq> $$14 = $$12.b(b);
+   private static efq.c a(ir<daf> $$0, duw.b $$1, egb $$2) {
+      return a($$0, Map.of(), $$1, $$2);
+   }
+
+   private static efq.c a(ir<daf> $$0, egb $$1) {
+      return a($$0, Map.of(), duw.b.e, $$1);
+   }
+
+   public static void a(pz<efq> $$0) {
+      io<daf> $$1 = $$0.a(ku.aw);
+      io<egz> $$2 = $$0.a(ku.aJ);
       $$0.a(
-         a,
-         new egq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(ego.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(ego.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(ego.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
-            ),
-            egq.a.b
+         efk.a,
+         new ehq(
+            a($$1.b(avd.y), Map.of(bqw.a, new efx(efx.a.b, bmt.a(new dar.c(bqg.aB, 1, 1, 1)))), duw.b.e, egb.c), $$2.b(qe.a), 7, edw.a(dvu.a(0)), true, dva.a.a
          )
       );
-      qe.a(
-         $$0,
-         "village/taiga/streets",
-         new egq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(ego.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(ego.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(ego.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(ego.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(ego.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(ego.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(ego.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(ego.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(ego.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(ego.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(ego.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ego.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(ego.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(ego.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(ego.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            egq.a.a
-         )
-      );
-      qe.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new egq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(ego.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(ego.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(ego.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(ego.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(ego.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(ego.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(ego.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(ego.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(ego.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(ego.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(ego.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ego.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(ego.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(ego.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(ego.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            egq.a.a
-         )
-      );
-      qe.a(
-         $$0,
-         "village/taiga/houses",
-         new egq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(ego.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(ego.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(ego.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(ego.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(ego.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(ego.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(ego.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(ego.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(ego.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(ego.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(ego.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(ego.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(ego.g(), 6)
-               }
-            ),
-            egq.a.b
-         )
-      );
-      qe.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new egq(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(ego.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(ego.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(ego.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(ego.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(ego.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(ego.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(ego.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(ego.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(ego.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(ego.g(), 6)
-               }
-            ),
-            egq.a.b
-         )
-      );
+      $$0.a(efk.b, new ehu(a($$1.b(avd.t), duw.b.d, egb.a), ehu.a.a));
+      $$0.a(efk.c, new ehu(a($$1.b(avd.u), duw.b.d, egb.a), ehu.a.b));
+      $$0.a(efk.d, new eim(a($$1.b(avd.Q), egb.a)));
+      $$0.a(efk.e, new ehs(a($$1.b(avd.s), egb.a)));
+      $$0.a(efk.f, new ehl(a($$1.b(avd.q), egb.a)));
+      $$0.a(efk.g, new ehp(a($$1.b(avd.r), egb.a)));
+      $$0.a(efk.h, new eig(a($$1.b(avd.G), egb.a), false));
+      $$0.a(efk.i, new eig(a($$1.b(avd.F), egb.a), true));
       $$0.a(
-         b,
-         new egq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ego.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(ego.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(ego.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(ego.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            egq.a.a
+         efk.j,
+         new eik(
+            a(
+               $$1.b(avd.J),
+               Map.of(bqw.a, new efx(efx.a.a, bmt.a(new dar.c(bqg.bn, 1, 1, 1))), bqw.b, new efx(efx.a.a, bmt.a(new dar.c(bqg.p, 1, 1, 1)))),
+               duw.b.e,
+               egb.a
+            )
          )
       );
-      qe.a(
-         $$0,
-         "village/taiga/decor",
-         new egq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(ego.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ego.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ego.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ego.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ego.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(ego.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(ego.a($$2), 4),
-               Pair.of(ego.a($$3), 4),
-               Pair.of(ego.a($$4), 2),
-               Pair.of(ego.a($$5), 4),
-               Pair.of(ego.a($$6), 1),
-               new Pair[]{Pair.of(ego.g(), 4)}
-            ),
-            egq.a.b
+      $$0.a(efk.k, new eii(a($$1.b(avd.H), egb.b)));
+      $$0.a(
+         efk.l,
+         new eia(
+            a(
+               $$1.b(avd.v),
+               Map.of(bqw.a, new efx(efx.a.b, bmt.a(new dar.c(bqg.Y, 1, 2, 4))), bqw.e, new efx(efx.a.b, dar.a), bqw.d, new efx(efx.a.b, dar.a)),
+               duw.b.e,
+               egb.a
+            )
          )
       );
-      qe.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new egq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ego.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ego.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ego.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ego.a($$2), 4),
-               Pair.of(ego.a($$3), 4),
-               Pair.of(ego.a($$4), 2),
-               Pair.of(ego.a($$5), 4),
-               Pair.of(ego.a($$6), 1),
-               Pair.of(ego.g(), 4)
-            ),
-            egq.a.b
+      $$0.a(efk.m, new eic(a($$1.b(avd.w), egb.a), eic.a.b, 0.3F, 0.9F));
+      $$0.a(efk.n, new eic(a($$1.b(avd.x), egb.a), eic.a.a, 0.3F, 0.9F));
+      $$0.a(efk.o, new ehw(a($$1.b(avd.R), Map.of(bqw.a, new efx(efx.a.a, ehw.d)), duw.b.h, egb.a)));
+      $$0.a(efk.p, new ehy(a($$1.b(avd.S), duw.b.h, egb.c), eea.a(dvu.a(32), dvu.c(2))));
+      $$0.a(efk.q, new ehn(a($$1.b(avd.W), egb.a)));
+      $$0.a(efk.r, new ehj(a($$1.b(avd.p), duw.b.d, egb.a)));
+      $$0.a(efk.s, new ehq(a($$1.b(avd.T), egb.a), $$2.b(pv.a), 6, edw.a(dvu.a(33)), false));
+      $$0.a(efk.t, new ehq(a($$1.b(avd.L), egb.c), $$2.b(qf.a), 6, edw.a(dvu.a(0)), true, dva.a.a));
+      $$0.a(efk.u, new ehq(a($$1.b(avd.K), egb.c), $$2.b(qb.a), 6, edw.a(dvu.a(0)), true, dva.a.a));
+      $$0.a(efk.v, new ehq(a($$1.b(avd.M), egb.c), $$2.b(qi.a), 6, edw.a(dvu.a(0)), true, dva.a.a));
+      $$0.a(efk.w, new ehq(a($$1.b(avd.N), egb.c), $$2.b(qj.a), 6, edw.a(dvu.a(0)), true, dva.a.a));
+      $$0.a(efk.x, new ehq(a($$1.b(avd.O), egb.c), $$2.b(qn.a), 6, edw.a(dvu.a(0)), true, dva.a.a));
+      $$0.a(
+         efk.y,
+         new eie(
+            a($$1.b(avd.E), egb.a),
+            List.of(new eie.a(eid.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new eie.a(eid.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      qe.a(
-         $$0,
-         "village/taiga/villagers",
-         new egq(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ego.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(ego.a("village/taiga/villagers/baby"), 1),
-               Pair.of(ego.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            egq.a.b
+      $$0.a(efk.z, new eie(a($$1.b(avd.z), egb.a), new eie.a(eid.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
+      $$0.a(efk.A, new eie(a($$1.b(avd.A), egb.a), new eie.a(eid.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
+      $$0.a(efk.B, new eie(a($$1.b(avd.C), egb.a), new eie.a(eid.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
+      $$0.a(
+         efk.C,
+         new eie(
+            a($$1.b(avd.D), egb.a),
+            List.of(new eie.a(eid.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new eie.a(eid.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      qe.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new egq(
-            $$13,
-            ImmutableList.of(Pair.of(ego.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(ego.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            egq.a.b
+      $$0.a(efk.D, new eie(a($$1.b(avd.B), egb.a), new eie.a(eid.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
+      $$0.a(efk.E, new eie(a($$1.b(avd.V), egb.a), new eie.a(eid.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
+      $$0.a(
+         efk.F,
+         new ehq(
+            a($$1.b(avd.U), Arrays.stream(bqw.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new efx(efx.a.b, bmt.c()))), duw.b.h, egb.d),
+            $$2.b(pq.a),
+            Optional.of(new ajv("city_anchor")),
+            7,
+            edw.a(dvu.a(-27)),
+            false,
+            Optional.empty(),
+            116,
+            List.of()
          )
       );
+      $$0.a(efk.G, new ehq(a($$1.b(avd.P), Map.of(), duw.b.d, egb.b), $$2.b(qp.a), 7, edw.a(dvu.a(-15)), false, dva.a.a));
    }
 }
