@@ -1,55 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class rd {
-   public static final ajs<dxi<?, ?>> a = rc.a("ice_spike");
-   public static final ajs<dxi<?, ?>> b = rc.a("ice_patch");
-   public static final ajs<dxi<?, ?>> c = rc.a("forest_rock");
-   public static final ajs<dxi<?, ?>> d = rc.a("iceberg_packed");
-   public static final ajs<dxi<?, ?>> e = rc.a("iceberg_blue");
-   public static final ajs<dxi<?, ?>> f = rc.a("blue_ice");
-   public static final ajs<dxi<?, ?>> g = rc.a("lake_lava");
-   public static final ajs<dxi<?, ?>> h = rc.a("disk_clay");
-   public static final ajs<dxi<?, ?>> i = rc.a("disk_gravel");
-   public static final ajs<dxi<?, ?>> j = rc.a("disk_sand");
-   public static final ajs<dxi<?, ?>> k = rc.a("freeze_top_layer");
-   public static final ajs<dxi<?, ?>> l = rc.a("disk_grass");
-   public static final ajs<dxi<?, ?>> m = rc.a("bonus_chest");
-   public static final ajs<dxi<?, ?>> n = rc.a("void_start_platform");
-   public static final ajs<dxi<?, ?>> o = rc.a("desert_well");
-   public static final ajs<dxi<?, ?>> p = rc.a("spring_lava_overworld");
-   public static final ajs<dxi<?, ?>> q = rc.a("spring_lava_frozen");
-   public static final ajs<dxi<?, ?>> r = rc.a("spring_water");
+   public static final aju<dxr<?, ?>> a = re.a("end_spike");
+   public static final aju<dxr<?, ?>> b = re.a("end_gateway_return");
+   public static final aju<dxr<?, ?>> c = re.a("end_gateway_delayed");
+   public static final aju<dxr<?, ?>> d = re.a("chorus_plant");
+   public static final aju<dxr<?, ?>> e = re.a("end_island");
 
-   public static void a(px<dxi<?, ?>> $$0) {
-      rc.a($$0, a, dxv.s);
-      rc.a($$0, b, dxv.G, new dzw(eci.a(dca.iC), dvy.c(List.of(dca.j, dca.i, dca.l, dca.k, dca.fl, dca.dP, dca.dO)), bnl.a(2, 3), 1));
-      rc.a($$0, c, dxv.F, new dzs(dca.cn.n()));
-      rc.a($$0, d, dxv.E, new dzs(dca.iC.n()));
-      rc.a($$0, e, dxv.E, new dzs(dca.mW.n()));
-      rc.a($$0, f, dxv.D);
-      rc.a($$0, g, dxv.H, new dyk.a(eca.a(dca.H.n()), eca.a(dca.b.n())));
-      rc.a($$0, h, dxv.G, new dzw(eci.a(dca.dR), dvy.c(List.of(dca.j, dca.dR)), bnl.a(2, 3), 1));
-      rc.a($$0, i, dxv.G, new dzw(eci.a(dca.L), dvy.c(List.of(dca.j, dca.i)), bnl.a(2, 5), 2));
-      rc.a(
-         $$0, j, dxv.G, new dzw(new eci(eca.a(dca.I), List.of(new eci.a(dvy.a(ih.a.q(), dca.a), eca.a(dca.aV)))), dvy.c(List.of(dca.j, dca.i)), bnl.a(2, 6), 2)
-      );
-      rc.a($$0, k, dxv.u);
-      rc.a(
-         $$0,
-         l,
-         dxv.G,
-         new dzw(
-            new eci(eca.a(dca.j), List.of(new eci.a(dvy.a(dvy.b(dvy.b(ih.b.q()), dvy.a(ih.b.q(), ekt.c))), eca.a(dca.i)))),
-            dvy.c(List.of(dca.j, dca.sI)),
-            bnl.a(2, 6),
-            2
-         )
-      );
-      rc.a($$0, m, dxv.ac);
-      rc.a($$0, n, dxv.n);
-      rc.a($$0, o, dxv.o);
-      rc.a($$0, p, dxv.k, new eau(ekt.e.g(), true, 4, 1, ip.a(dby::r, dca.b, dca.c, dca.e, dca.g, dca.sJ, dca.qz, dca.qN, dca.j)));
-      rc.a($$0, q, dxv.k, new eau(ekt.e.g(), true, 4, 1, ip.a(dby::r, dca.dP, dca.qP, dca.iC)));
-      rc.a($$0, r, dxv.k, new eau(ekt.c.g(), true, 4, 1, ip.a(dby::r, dca.b, dca.c, dca.e, dca.g, dca.sJ, dca.qz, dca.qN, dca.j, dca.dP, dca.qP, dca.iC)));
+   public static void a(pz<dxr<?, ?>> $$0) {
+      re.a($$0, a, dye.J, new ebc(false, ImmutableList.of(), null));
+      re.a($$0, b, dye.L, eah.a(apu.a, true));
+      re.a($$0, c, dye.L, eah.a());
+      re.a($$0, d, dye.l);
+      re.a($$0, e, dye.K);
    }
 }
